Add Final changes

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
         <div class="navlinks-left">
           <ul>
-            <li><a href="#" target="_blank">Home</a></li>
-            <li><a href="#" target="_blank">Explore Us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index2.html">Explore Us</a></li>
             <li><a href="#" target="_blank">Category</a></li>
           </ul>
         </div>
@@ -59,295 +59,9 @@
               Hurry !
             </h1>
           </div>
-          <div><button>Shop Now!</button></div>
-        </div>
-      </div>
-    </section>
-    <div class="heading"><h1>Today's Offers !</h1></div>
-    <section id="category-sec">
-      <div class="aside-content">
-        <aside>
-          <h1>Male</h1>
-          <ul>
-            <li>
-              T-Shirts&Tops
-              <select>
-                <option>Basics</option>
-                <option>Printed</option>
-                <option>Zip-top</option>
-                <option>Oversized-Tee</option>
-                <option>Polo-Tshirts</option>
-              </select>
-            </li>
-            <li>
-              Bottom-wear
-              <select>
-                <option>Jeans</option>
-                <option>trousers</option>
-                <option>Lower</option>
-                <option>TrackPants</option>
-                <option>Cargo</option>
-              </select>
-            </li>
-
-            <li>
-              Shirts
-              <select>
-                <option>Corduroy</option>
-                <option>Flannel</option>
-                <option>Short-Sleeved</option>
-                <option>Patterned resort shirt</option>
-              </select>
-            </li>
-            <li>
-              Watches
-              <select>
-                <option>Aviator</option>
-                <option>Racing</option>
-                <option>Luxury</option>
-                <option>Sport</option>
-                <option>Smart</option>
-              </select>
-            </li>
-
-            <li>
-              Shoes
-              <select>
-                <option>Sneakers</option>
-                <option>Chelsea</option>
-                <option>Loafers</option>
-              </select>
-            </li>
-            <li>
-              Winters |For Him
-              <select>
-                <option>Hoodies</option>
-                <option>Sweat-Shirt</option>
-                <option>Cardigan</option>
-                <option>Jackets</option>
-                <option>Coats</option>
-              </select>
-            </li>
-          </ul>
-        </aside>
-        <aside>
-          <h1>Female</h1>
-          <ul>
-            <li>
-              Crop-Tops
-              <select>
-                <option>Halter-Tops</option>
-                <option>Camisole</option>
-                <option>Cropped-Shirt</option>
-                <option>Choker-Crop-Tops</option>
-                <option>Bardot-Crop-Tops</option>
-                <option>Denim-Crop-Tops</option>
-                <option>Peplum</option>
-                <option>Cropped-Tee</option>
-              </select>
-            </li>
-
-            <li>
-              Jeans
-              <select>
-                <option>High-waist</option>
-                <option>Mom-Jeans</option>
-                <option>Cargo</option>
-                <option>SlimFit</option>
-                <option>Baggy</option>
-                <option>Wide High</option>
-                <li>Trousers</li>
-              </select>
-            </li>
-            <li>
-              Dresses
-              <select>
-                <option>BodyCon</option>
-                <option>Backless</option>
-                <option>Shirt Dress</option>
-                <option>SunDress</option>
-                <option>Maxi</option>
-                <option>Wrap</option>
-                <option>Halter</option>
-                <option>One-Shoulder</option>
-              </select>
-            </li>
-            <li>
-              Skirts
-              <select>
-                <option>Pencil</option>
-                <option>Denim</option>
-                <option>Pleats</option>
-                <option>Tulip</option>
-                <option>High waist</option>
-                <option>Minis</option>
-              </select>
-            </li>
-
-            <li>
-              Purses And More
-              <select>
-                <option>Shoulder</option>
-                <option>Hobo</option>
-                <option>Backpacks</option>
-                <option>Fanny-Pack</option>
-                <option>Baguette</option>
-                <option>Tote</option>
-              </select>
-            </li>
-            <li>
-              Lingeries
-              <select>
-                <option>Bra</option>
-                <option>Thongs</option>
-                <option>Briefs</option>
-                <option>Self-Adhesive Bra</option>
-                <option>Body-suits</option>
-              </select>
-            </li>
-            <li>
-              Assecories
-              <select>
-                <option>Beauty</option>
-                <option>Hair Needs</option>
-                <option>Footwears</option>
-                <option>New Scents</option>
-                <option>Rings,Necklace &Ear Rings</option>
-                <option>Watches</option>
-                <option>Belt,Scarves&More</option>
-                <option>Sunglasses & Frames</option>
-                <option>Sleep-wear</option>
-                <option>Sports</option>
-                <option>Sleep-wear</option>
-                <option>Gadgets</option>
-                <option>Watches</option>
-              </select>
-            </li>
-            <li>
-              Ethnic Collection
-              <select>
-                <option>Kurta Set</option>
-                <option>Kurta's</option>
-                <option>Salwar-Kameez</option>
-                <option>Duppatta</option>
-                <option>Blouse</option>
-                <option>Saree</option>
-              </select>
-            </li>
-            <li>
-              Winters |For Her
-              <select>
-                <option>Hoodies</option>
-                <option>Sweat-Shirt</option>
-                <option>Cardigan</option>
-                <option>Jackets</option>
-                <option>Coats</option>
-              </select>
-            </li>
-          </ul>
-        </aside>
-      </div>
-      <div class="c-img-main">
-        <div class="img-container">
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox6.jpeg" alt="watch" />
-              <div class="offer">50% OFF</div>
-            </div>
-            <p>Ethnic Wear<br />1699 &#8377;</p>
+          <div>
+            <a href="index2.html"><button>Shop Now!</button></a>
           </div>
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox2.jpeg" alt="watch" />
-              <div class="offer">35% OFF</div>
-            </div>
-            <p>Red Turtle Neck Top<br />799 &#8377;</p>
-          </div>
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox3.jpeg" alt="watch" />
-              <div class="offer">20% OFF</div>
-            </div>
-            <p>CrossBody Bag<br />1099 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox4.jpeg" alt="watch" />
-              <div class="offer">40% OFF</div>
-            </div>
-            <p>Brown-DuffleBag<br />1200 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox12.jpeg" alt="watch" />
-              <div class="offer">20% OFF</div>
-            </div>
-            <p>Jacket & Coats | For Him<br />1499 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox8.avif" alt="watch" />
-              <div class="offer">30% OFF</div>
-            </div>
-            <p>SunDresses<br />1399 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox7.jpeg" alt="watch" />
-              <div class="offer">15% OFF</div>
-            </div>
-            <p>Lehnga & More <br />1699 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox10.jpeg" alt="watch" />
-              <div class="offer">10% OFF</div>
-            </div>
-            <p>Party Specials<br />1399 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox11.jpeg" alt="watch" />
-              <div class="offer">60% OFF</div>
-            </div>
-            <p>Night Wears<br />799 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox1.avif" alt="watch" />
-              <div class="offer">40% OFF</div>
-            </div>
-            <p>Watch<br />799 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox9.jpeg" alt="watch" />
-              <div class="offer">50% OFF</div>
-            </div>
-            <p>Blue Wrap-Dress<br />1399 &#8377;</p>
-          </div>
-
-          <div class="c-box1">
-            <div class="c-img-box1">
-              <img src="Assets/cimgbox13.jpeg" alt="berret" />
-              <div class="offer">10% OFF</div>
-            </div>
-            <p>Black Berret<br />699 &#8377;</p>
-          </div>
-        </div>
-        <div class="next">
-          <a href="#">View More... <i class="fa-solid fa-arrow-right"></i></a>
-          <a href="#">1</a>
-          <a href="#">2</a>
-          <a href="#">3</a>
         </div>
       </div>
     </section>
