Add Final Changes

--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="index2.html">Explore Us</a></li>
-            <li><a href="#" target="_blank">Category</a></li>
+            <li><a href="Category.html">Category</a></li>
           </ul>
         </div>
         <div class="navlinks-right">
@@ -42,9 +42,9 @@
             <li>
               <input type="text" placeholder="What are You Looking For?" />
             </li>
-            <li><i class="fa-solid fa-user"></i></li>
-            <li><i class="fa-solid fa-heart-circle-plus"></i></li>
-            <li><i class="fa-brands fa-opencart"></i></li>
+            <li><a href="form.html"><i class="fa-solid fa-user"></i></a></li>
+            <li><a href="Fav.html"><i class="fa-solid fa-heart-circle-plus"></i></a></li>
+            <li><a href="Cart.html"><i class="fa-brands fa-opencart"></i></a></li>
           </ul>
         </div>
       </div>
@@ -250,6 +250,7 @@
               <div class="offer">50% OFF</div>
             </div>
             <p>Ethnic Wear<br />1699 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
           <div class="c-box1">
             <div class="c-img-box1">
@@ -257,6 +258,7 @@
               <div class="offer">35% OFF</div>
             </div>
             <p>Red Turtle Neck Top<br />799 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
           <div class="c-box1">
             <div class="c-img-box1">
@@ -264,6 +266,7 @@
               <div class="offer">20% OFF</div>
             </div>
             <p>CrossBody Bag<br />1099 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -272,6 +275,7 @@
               <div class="offer">40% OFF</div>
             </div>
             <p>Brown-DuffleBag<br />1200 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -280,6 +284,7 @@
               <div class="offer">20% OFF</div>
             </div>
             <p>Jacket & Coats | For Him<br />1499 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -288,6 +293,7 @@
               <div class="offer">30% OFF</div>
             </div>
             <p>SunDresses<br />1399 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -296,6 +302,7 @@
               <div class="offer">15% OFF</div>
             </div>
             <p>Lehnga & More <br />1699 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -304,6 +311,7 @@
               <div class="offer">10% OFF</div>
             </div>
             <p>Party Specials<br />1399 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -312,6 +320,7 @@
               <div class="offer">60% OFF</div>
             </div>
             <p>Night Wears<br />799 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -320,6 +329,7 @@
               <div class="offer">40% OFF</div>
             </div>
             <p>Watch<br />799 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -328,6 +338,7 @@
               <div class="offer">50% OFF</div>
             </div>
             <p>Blue Wrap-Dress<br />1399 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
 
           <div class="c-box1">
@@ -336,6 +347,7 @@
               <div class="offer">10% OFF</div>
             </div>
             <p>Black Berret<br />699 &#8377;</p>
+            <div class="wl"><button>Add to Wishlist</button></div>
           </div>
         </div>
         <div class="next">
