--- a/Cart.html
+++ b/Cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Your Cart</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <section id="header">
+    <section id="header-cart">
       <div class="navbar">
         <div class="logo">
           <img src="Assets/foryou-logo-zip-file/png/logo-no-background.png" />
@@ -43,9 +43,17 @@
             <li>
               <input type="text" placeholder="What are You Looking For?" />
             </li>
-            <li><a href="form.html"><i class="fa-solid fa-user"></i></a></li>
-            <li><a href="Fav.html"><i class="fa-solid fa-heart-circle-plus"></i></a></li>
-            <li><a href="Cart.html"><i class="fa-brands fa-opencart"></i></a></li>
+            <li>
+              <a href="form.html"><i class="fa-solid fa-user"></i></a>
+            </li>
+            <li>
+              <a href="Fav.html"
+                ><i class="fa-solid fa-heart-circle-plus"></i
+              ></a>
+            </li>
+            <li>
+              <a href="Cart.html"><i class="fa-brands fa-opencart"></i></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -54,9 +62,7 @@
         <div class="small-container">
           <div>
             <h1>
-              Find Your Favorite<br />
-              Products Here.<br />
-              Hurry !
+              Oops! Your Cart Is Empty, <br>Hurry Up Start Shopping Now !
             </h1>
           </div>
           <div>
@@ -101,9 +107,9 @@
           <ul>
             FOLLOW US
             <li><a href="">FaceBook</a></li>
-            <li><a href="" >Instagram</a></li>
-            <li><a href="" >Twitter</a></li>
-            <li><a href="" >Youtube</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Youtube</a></li>
           </ul>
         </div>
       </div>
