--- a/Fav.html
+++ b/Fav.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Wishlist</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -24,9 +24,8 @@
       referrerpolicy="no-referrer"
     />
   </head>
-
   <body>
-    <section id="header">
+    <section id="header-wishlist">
       <div class="navbar">
         <div class="logo">
           <img src="Assets/foryou-logo-zip-file/png/logo-no-background.png" />
@@ -43,21 +42,24 @@
             <li>
               <input type="text" placeholder="What are You Looking For?" />
             </li>
-            <li><a href="form.html"><i class="fa-solid fa-user"></i></a></li>
-            <li><a href="Fav.html"><i class="fa-solid fa-heart-circle-plus"></i></a></li>
+            <li>
+              <a href="form.html"><i class="fa-solid fa-user"></i></a>
+            </li>
+            <li>
+              <a href="Fav.html"
+                ><i class="fa-solid fa-heart-circle-plus"></i
+              ></a>
+            </li>
             <li><a href="Cart.html"><i class="fa-brands fa-opencart"></i></a></li>
           </ul>
         </div>
       </div>
       <!-- Banner -->
-      <div class="banner">
-        <div class="small-container">
+      <div class="bwl">
+        <div class="small-container scwl">
           <div>
-            <h1>
-              Find Your Favorite<br />
-              Products Here.<br />
-              Hurry !
-            </h1>
+            <h1>Your Wishlist is Empty</h1>
+            <h2>Hurry! Start Adding Your Favorites!</h2>
           </div>
           <div>
             <a href="index2.html"><button>Shop Now!</button></a>
@@ -65,7 +67,62 @@
         </div>
       </div>
     </section>
+    <!------------- Wishlist-Section--------------->
+    <section class="wishlist-sec">
+     
+      <div class="wishlist-container">
+        <h1>You May Like..</h1>
+        <div class="wishlist-content">
 
+          <div class="wlbox1">
+            <img src="Assets/wlbox2.avif" />
+            <div class="overlay"></div>
+            <div class="desc"><p>Explore More Like This</p><hr></div>
+            <div class="subtitle"><p>Sundress For 899 Rs/-</p></div>
+          </div>
+
+          <div class="wlbox1">
+            <img src="Assets/wlbox1.avif" />
+            <div class="overlay"></div>
+            <div class="desc"><p>Explore More Like This</p><hr></div>
+            <div class="subtitle"><p>Men | Tshirts for 999 Rs/-</p></div>
+          </div>
+
+          <div class="wlbox1">
+            <img src="Assets/wlbox4.avif" />
+            <div class="overlay"></div>
+            <div class="desc"><p>Explore More Like This</p><hr></div>
+            <div class="subtitle"><p>Men | Shoes for 1349 Rs/-</p></div>
+          </div>
+
+          <div class="wlbox1">
+            <img src="Assets/wlbox5.avif" />
+            <div class="overlay"></div>
+            <div class="desc"><p>Explore More Like This</p><hr></div>
+            <div class="subtitle"><p>Women | Tops For 499 Rs/-</p></div>
+          </div>
+
+          <div class="right-icon">
+            <i class="fa-solid fa-chevron-right"></i>
+            <a href="#">See more..</a>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+      </div>
+    </section>
+    <!------------Footer-Section---------------------->
     <section class="footer">
       <div class="footer-sec">
         <div class="first-footer">
@@ -101,9 +158,9 @@
           <ul>
             FOLLOW US
             <li><a href="">FaceBook</a></li>
-            <li><a href="" >Instagram</a></li>
-            <li><a href="" >Twitter</a></li>
-            <li><a href="" >Youtube</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Youtube</a></li>
           </ul>
         </div>
       </div>
