Addn Final Changes

--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
             <li><a href="Category.html">Category</a></li>
           </ul>
         </div>
-        <div class="navlinks-right">
+        <div class="navlinks-right explore-right">
           <ul>
             <li>
               <input type="text" placeholder="What are You Looking For?" />
