--- a/Category.html
+++ b/Category.html
@@ -31,7 +31,7 @@
         <div class="logo">
           <img src="Assets/foryou-logo-zip-file/png/logo-no-background.png" />
         </div>
-        <div class="navlinks-left cat cat-right">
+        <div class="navlinks-left cat cat-left">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="index2.html">Explore Us</a></li>
