--- a/Cart.html
+++ b/Cart.html
@@ -58,7 +58,7 @@
         </div>
       </div>
       <!-- Banner -->
-      <div class="banner">
+      <div class="banner banner-cart">
         <div class="small-container">
           <div>
             <h1>
